Port from Groovy to Kotlin pt. infinity